--- a/web.config
+++ b/web.config
@@ -9,6 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 
+  <connectionStrings>
+    <add name="filth1connection" connectionString="Data Source=.\SQLEXPRESS;AttachDBFilename=|DataDirectory|filthdb_2137818529.mdf;User Instance=true;Integrated Security=true;multipleactiveresultsets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -19,7 +23,7 @@
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5"/>
-	 
+	
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -33,7 +37,13 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-	  
+	  <httpProtocol>
+		  <customHeaders>
+
+			  <!-- P3P Standard sucks at least the half of suck-quantity of Internet Explorer -->
+			  <add name="P3P" value='policyref="/w3c/p3p.xml", CP="NOI DSP COR CURa ADMa DEVa OUR BUS IND UNI COM NAV"'/>	  
+		  </customHeaders>
+	  </httpProtocol>
     <handlers>
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
